<resources>
    <string name="app_name">Отель</string>
    <string name="price_in_rubles">%1$d \u20BD</string>

<!--    HotelFragment-->
    <string name="hotel_fragment_min_price">от %1$d \u20BD</string>
    <string name="hotel_fragment_select_room_button">К выбору номера</string>
    <string name="hotel_fragment_about_hotel_title">Об отеле</string>
<!--    Actions-->
    <string name="hotel_fragment_action_subtitle">Самое необходимое</string>
    <string name="hotel_fragment_action_conveniences_title">Удобства</string>
    <string name="hotel_fragment_action_what_includes_title">Что включено</string>
    <string name="hotel_fragment_action_what_not_includes_title">Что не включено</string>

<!--    RoomsFragment-->
    <string name="rooms_details_title">Подробнее о номере</string>
    <string name="rooms_fragment_select_room_button">Выбрать номер</string>

<!--    BookingFragment-->
    <string name="booking_fragment_btn_pay_default_text">Оплатить</string>
    <string name="booking_fragment_btn_pay_text_with_sum">Оплатить %1$d \u20BD</string>
    <string name="booking_fragment_departure_title">Вылет из</string>
    <string name="booking_fragment_arrival_country_title">Страна, город</string>
    <string name="booking_fragment_arrival_tour_dates_title">Даты</string>
    <string name="booking_fragment_arrival_number_of_nights_title">Кол-во ночей</string>
    <string name="booking_fragment_arrival_number_of_nights_data">%1$d ночей</string>
    <string name="booking_fragment_arrival_hotel_title">Отель</string>
    <string name="booking_fragment_arrival_room_title">Номер</string>
    <string name="booking_fragment_arrival_nutrition_title">Питание</string>
    <string name="booking_fragment_arrival_user_info_title">Информация о покупателе</string>
    <string name="booking_fragment_arrival_user_phone_number_hint">Номер телефона</string>
    <string name="booking_fragment_arrival_user_email_hint">Почта</string>
    <string name="booking_fragment_arrival_user_additional_info">Эти данные никому не передаются.
        После оплаты мы вышлим чек на указанные Вами адрес и почту.</string>
    <string name="booking_fragment_price_tour_price_title">Тур</string>
    <string name="booking_fragment_price_fuel_charge_title">Топливыный сбор</string>
    <string name="booking_fragment_price_service_charge_title">Сервисный сбор</string>
    <string name="booking_fragment_price_sum_charge_title">К оплате</string>
<!--    Tourist-->
    <string name="booking_fragment_tourist_firstname">Имя</string>
    <string name="booking_fragment_tourist_surname">Фамилия</string>
    <string name="booking_fragment_tourist_bithday">Дата рождения</string>
    <string name="booking_fragment_tourist_citizenship">Гражданство</string>
    <string name="booking_fragment_tourist_passport_number">Номер загранпаспорта</string>
    <string name="booking_fragment_tourist_passport_validity">Срок действия загранпаспорта</string>
    <string name="booking_fragment_tourist_add_new">Добавить туриста</string>
<!--    User info-->

<!--    PaidFragment-->
    <string name="paid_fragment_title">Ваш заказ принят в работу</string>
    <string name="paid_fragment_message">Подтверждение заказа №%1$d может занять некоторое время (от 1 часа до суток).
        Как только мы получим ответ от туроператора, Вам на почту придет уведомление.</string>
    <string name="paid_fragment_super_button">Супер</string>

<!--    Error layout-->
    <string name="error_load_text">Ошибка загрузки</string>

<!--    Toasts-->
    <string name="toast_error_load_hotel_info">Ошибка загрузки данных об отеле!</string>
    <string name="toast_error_load_rooms_info">Ошибка загрузки данных о номерах!</string>
    <string name="toast_error_load_booking_info">Ошибка загрузки данных о бронировании!</string>
    <string name="toast_error_load_price_info">Ошибка загрузки данных о ценах!</string>
    <string name="toast_error_not_fill_all_fields">Не все поля заполнены!</string>

<!--    Action bar-->
    <string name="action_bar_title_hotel">Отель</string>
    <string name="action_bar_title_rooms">Номера</string>
    <string name="action_bar_title_booking">Бронирование</string>
    <string name="action_bar_title_paid">Заказ оплачен</string>

<!--    Tourist item numbers-->
    <string name="tourist_item">турист</string>
    <string-array name="tourist_numbers">
        <item>Первый</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвертый</item>
        <item>Пятый</item>
        <item>Шестой</item>
        <item>Седьмой</item>
        <item>Восьмой</item>
        <item>Девятый</item>
        <item>Десятый</item>
    </string-array>
</resources>