<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_firstname"
        style="@style/Hotel_TextInputLayout"
        android:layout_marginStart="@dimen/hotel_fragment_margin_start_end_elements"
        android:layout_marginEnd="@dimen/hotel_fragment_margin_start_end_elements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_firstname"
            style="@style/Hotel_TextInputEditText"
            android:hint="@string/booking_fragment_tourist_firstname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_surname"
        style="@style/Hotel_TextInputLayout"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_firstname"
        app:layout_constraintTop_toBottomOf="@id/txt_input_layout_firstname"
        app:layout_constraintEnd_toEndOf="@id/txt_input_layout_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_surname"
            style="@style/Hotel_TextInputEditText"
            android:hint="@string/booking_fragment_tourist_surname"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_birthday"
        style="@style/Hotel_TextInputLayout"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_firstname"
        app:layout_constraintTop_toBottomOf="@id/txt_input_layout_surname"
        app:layout_constraintEnd_toEndOf="@id/txt_input_layout_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_birthday"
            style="@style/Hotel_TextInputEditText"
            android:hint="@string/booking_fragment_tourist_bithday"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_citizenship"
        style="@style/Hotel_TextInputLayout"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_firstname"
        app:layout_constraintTop_toBottomOf="@id/txt_input_layout_birthday"
        app:layout_constraintEnd_toEndOf="@id/txt_input_layout_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_citizenship"
            style="@style/Hotel_TextInputEditText"
            android:hint="@string/booking_fragment_tourist_citizenship"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_passport_number"
        style="@style/Hotel_TextInputLayout"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_firstname"
        app:layout_constraintTop_toBottomOf="@id/txt_input_layout_citizenship"
        app:layout_constraintEnd_toEndOf="@id/txt_input_layout_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passport_number"
            style="@style/Hotel_TextInputEditText"
            android:hint="@string/booking_fragment_tourist_passport_number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_passport_validity"
        style="@style/Hotel_TextInputLayout"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_firstname"
        app:layout_constraintTop_toBottomOf="@id/txt_input_layout_passport_number"
        app:layout_constraintEnd_toEndOf="@id/txt_input_layout_firstname"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/hotel_fragment_margin_top_elements">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passport_validity"
            style="@style/Hotel_TextInputEditText"
            android:hint="@string/booking_fragment_tourist_passport_validity"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>